# venice-arbitrage-monitor

./: .env.example  .gitignore  FIRST_RUN_RESULTS.md  LICENSE  LIQUIDITY_DISCOVERY.md  QUICKSTART.md  README.md  SETUP_NOTIFICATIONS.md  TRIANGULAR_ARBITRAGE.md  config.example.yaml  pyproject.toml  requirements.txt
scripts/: manual_check.py
systemd/: venice-monitor.service
venice_monitor/: __init__.py  main.py
venice_monitor/analysis/: __init__.py  intrinsic_value.py  spread_analyzer.py  vvv_signals.py
venice_monitor/notifications/: caelum_notifier.py
venice_monitor/pricing/: __init__.py  diem_tracker.py  mint_calculator.py  vvv_tracker.py
venice_monitor/pricing/exchanges/: __init__.py  coingecko.py  coinmarketcap.py
venice_monitor/storage/: __init__.py  price_history.py
venice_monitor/utils/: config.py  logger.py
